# voice-note-thumbnail

./: README.md  app.py  pyproject.toml  requirements.txt
