[project]
name = "voice-note-thumbnail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.31.0",
    "groq>=0.31.0",
    "litellm>=1.76.0",
    "pillow>=11.3.0",
    "pilmoji>=2.0.4",
    "pilmoji-fixed>=1.3.2",
    "requests>=2.32.5",
    "streamlit>=1.49.0",
]
